<resources>
    <string name="app_name">悦读FM</string>
    <string name="start_to_user">开始体验</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="user_nick_name">昵称:%1$s</string>


    <!--主要功能-->

    <string name="slider_my_collection">我的收藏</string>
    <string name="slider_my_care">我关注的</string>
    <string name="slider_my_praise">我赞过的</string>

    <string name="slider_my_feedback">意见反馈</string>
    <string name="slider_my_share">分享好友</string>

    <string name="slider_my_update">检查更新</string>
    <string name="slider_my_about">关于我们</string>


    <!--用户登录/注册-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <!--搜索-->
    <string name="search_news_hit">请输入关键字</string>

    <string name="share_title">分享</string>
</resources>
