<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/slider_my_collection" />
        <item
            android:id="@+id/nav_care"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/slider_my_care" />
        <item
            android:id="@+id/nav_praise"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slider_my_praise" />
        </group>

            <group android:checkableBehavior="single"
                android:id="@+id/group2">
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/slider_my_feedback" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"

                    android:title="@string/slider_my_share" />
            </group>



          <group
              android:id="@+id/group3"
              android:checkableBehavior="single" >
                <item
                    android:id="@+id/nav_update"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/slider_my_update" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/slider_my_about" />
            </group>

</menu>

